tests/abnormal/abnormal.exp
Error ------------------------------------------------------------------------------------------- break-continue.js:16:5

Unreachable code. [unreachable-code]

   16|     break; // Error - unreachable
           ^^^^^^


Error ------------------------------------------------------------------------------------------- break-continue.js:27:5

Unreachable code. [unreachable-code]

   27|     break; // Error - unreachable
           ^^^^^^


Error ------------------------------------------------------------------------------------------- break-continue.js:38:5

Unreachable code. [unreachable-code]

   38|     break; // Error - unreachable
           ^^^^^^


Error ------------------------------------------------------------------------------------------- break-continue.js:49:5

Unreachable code. [unreachable-code]

   49|     break; // Error - unreachable
           ^^^^^^


Error ------------------------------------------------------------------------------------------- break-continue.js:63:4

Cannot cast `x` to number because null [1] is incompatible with number [2]. [incompatible-cast]

   break-continue.js:63:4
   63|   (x: number); // Error - null incompatible with number
          ^

References:
   break-continue.js:54:10
   54|   let x: null | number = 3;
                ^^^^ [1]
   break-continue.js:63:7
   63|   (x: number); // Error - null incompatible with number
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- toplevel_break.js:1:1

Illegal break statement

   1| break; // error, illegal
      ^^^^^^


Error ----------------------------------------------------------------------------------------- toplevel_continue.js:1:1

Illegal continue statement

   1| continue; // error, illegal
      ^^^^^^^^^


Error ------------------------------------------------------------------------------------------- toplevel_return.js:1:1

Illegal return statement

   1| return; // error, illegal
      ^^^^^^



Found 8 errors
